# FLStudioMCP

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  LIMITATIONS.md  TOOLS.md
fl_bridge/: device_FLStudioMCP.py
fl_bridge/piano_roll/: ComposeWithLLM.pyscript  fLMCP_bridge.pyscript
scripts/: install_windows.ps1  smoke_test.py  uninstall_windows.ps1
src/fl_studio_mcp/: __init__.py  audio_analysis.py  bridge_client.py  file_bridge.py  gui_voice.py  keystroke.py  protocol.py  server.py  voice_to_midi.py
src/fl_studio_mcp/resources/: __init__.py  project.py
src/fl_studio_mcp/tools/: __init__.py  arrangement.py  audio.py  automation.py  channels.py  generators.py  meta.py  mixer.py  patterns.py  piano_roll.py  playlist.py  plugins.py  project.py  transport.py  ui.py  voice.py
tests/: test_generators.py  test_protocol.py  test_server_build.py
